# bayes-p1

./: app.py  exploring.ipynb  logit_rede_ensino.stan  logit_rede_ensino_cached  logit_rede_ensino_cached.stan  logit_rede_ensino_fixed  logit_rede_ensino_fixed.stan  pyproject.toml  requirements.txt
bayes/: pyproject.toml
